--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,14 +8,43 @@
     padding: 0px;
 }
 
+body {
+    display: flex;
+    flex-direction: row;
+}
+
 .odin-logo-container {
-    position: absolute;
     top: 0px;
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     color: white;
     font-family: "Norse Bold";
     background-color: rgb(0, 0, 0, 50%);
     font-size: 52px;
+    margin-left: auto;
+    padding: 16px;
+    position: relative;
+    top: -700px;
+}
+
+img[src="styles/odin-lined.png"] {
+    width: 100px;
+}
+
+.left-side-container {
+    width: 700px;
+    height: 1050px;
+    position: relative;
+}
+
+.background-image {
+    object-fit: cover;
+    height: auto;
+    width: 700px;
+}
+
+.right-side-container {
+    width: 900px;
 }
