--- a/styles/styles.css
+++ b/styles/styles.css
@@ -57,5 +57,14 @@ img[src="styles/odin-lined.png"] {
 }
 
 .right-side-container {
-    width: 900px;
+    width: auto;
+    padding-top: 12rem;
+    padding-right: 12rem;
+    padding-left: 6rem;
+}
+
+p {
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
 }
