--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,7 @@
 * {
     margin: 0px;
     padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -61,10 +62,34 @@ img[src="styles/odin-lined.png"] {
     padding-top: 12rem;
     padding-right: 12rem;
     padding-left: 6rem;
+    display: flex;
+    flex-direction: column;
 }
 
 p {
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
     font-size: large;
+    font-weight: bold;
+}
+
+ul {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+
+li {
+    list-style: none;
+}
+
+.input-container {
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+    gap: 8px;
+}
+
+form {
+    display: flex;
+    flex-direction: row;
+    gap: 64px;
 }
