--- a/styles/styles.css
+++ b/styles/styles.css
@@ -60,8 +60,6 @@ img[src="styles/odin-lined.png"] {
 .right-side-container {
     width: auto;
     padding-top: 12rem;
-    padding-right: 12rem;
-    padding-left: 6rem;
     display: flex;
     flex-direction: column;
 }
@@ -91,5 +89,27 @@ li {
 form {
     display: flex;
     flex-direction: row;
-    gap: 64px;
+    gap: 32px;
+}
+
+.form-container {
+    height: 400px;
+    padding-right: 12rem;
+    padding-left: 6rem;
+    box-shadow: 0 0 15px rgba(0,0,0,0.75);
+    clip-path: inset(0px 0px -15px 0px);
+}
+
+.create-account-container {
+    padding-left: 6rem;
+    padding-top: 3rem;
+}
+
+.create-account-button {
+    background-color: rgb(89,109,72);
+    color: white;
+    border-radius: 15px;
+    border: none;
+    width: 175px;
+    height: 50px;
 }
