--- a/styles/styles.css
+++ b/styles/styles.css
@@ -143,7 +143,7 @@ input:focus {
     outline: 1px solid rgb(80,117,223);
 }
 
-.password-match-text {
+#password-match-text {
     margin-top: 8px;
     font-size: 12px;
     font-weight: 100;
